--- a/src/main/resources/templates/basic/item.html
+++ b/src/main/resources/templates/basic/item.html
@@ -20,7 +20,7 @@
     <h2 th:if="${param.status}" th:text="저장완료"></h2>
     <div>
         <label for="itemId">상품 ID</label>
-        <input type="text" id="itemId" name="itemId" class="form-control" value="1" th:value="${item.id}" readonly>
+        <input type="text" id="itemId" name="itemId" class="form-control" value="1" th:value="${item.itemId}" readonly>
     </div>
     <div>
         <label for="itemName">상품명</label>
